[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robust-rl-observation-noise-benchmark"
version = "0.0.1"
description = "Benchmark suite for robust reinforcement learning under observation noise"
authors = [{name = "Abhijeet Gupta"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.24",
  "torch>=2.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
