[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-noise-benchmark"
version = "0.1.0"
description = "Benchmark suite for robust reinforcement learning under observation noise."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Abhijeet Gupta" }]
keywords = ["reinforcement-learning", "robustness", "observation-noise", "benchmark"]
dependencies = [
    "gymnasium[classic-control]>=0.29",
    "numpy>=1.24",
    "torch>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/abhijeetgupta02/robust-rl-observation-noise-benchmark"

[tool.setuptools.packages.find]
include = ["rl_noise_benchmark*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
